@@ -24,6 +24,8 @@ import sbt.Tests._
 def testGroups(tests: Seq[TestDefinition], baseDir: File): Seq[Group] = {
   val exportOptions = Seq(
     "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
     "--add-exports=java.base/sun.util.calendar=ALL-UNNAMED"
   )
   tests
